web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-inside-generator-method/output.txt
[SyntaxError]: yield expression can not used in parameter list (1,16)
1|({ *method(x = yield) {} })
 |              ^
